--- a/cit230/Lesson 5/css/main-5.css
+++ b/cit230/Lesson 5/css/main-5.css
@@ -2,17 +2,25 @@
 
 body {
   font-size: 16px;
-  font-family: "Lucida Console", Monaco, monospace  /* Declare the base font-family */
+  font-family: "Lucida Console", Monaco, monospace 
+  background-color: #d8e9e9; 
 }
 
 header, nav, main, footer { 
-  max-width: 1920; 
-}
+  max-width: 920px; 
+	}
 
-header {}
+header {	
+	background-color: #88ccf1;
+	padding: 10px;
+	}
+
 h1 {
 	font-family: Verdana, Geneva, sans-serif
 	}
+h2{
+	background-color:#39F;
+}
 header img {}
 header .subheading {}
 
@@ -30,17 +38,25 @@ nav ul li a {
 	display: block;
     color: black;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;}
+    padding: 10px 12px;
+    text-decoration: none;
+	backgroun-color:#88ccf1
+	}
 nav ul li.active a {
-	background-color: #f0f
+	background-color: #c1dff0;
 	}
 nav ul li a:hover {
-	background-color: #06F
+	background-color: #3587a4;
 		}
-@media only screen and (min-width: 64em){
+@media only screen and (max-width: 37.5em){
 	.forecast{
 		display: none;
+	}
+	nav ul{
+		alignment-adjust: middle;
+	}
+	nav ul li{
+		float: none;
 	}
 }
 main {}
