--- a/IndexStyle.css
+++ b/IndexStyle.css
@@ -6,6 +6,7 @@
 	img {
         position: absolute;
         box-shadow: 5px 5px 8px #444444;
+		width: 50px;
     }
     header {
         text-align: left;
