--- a/Week3/Styles/main.css
+++ b/Week3/Styles/main.css
@@ -1,4 +1,4 @@
-/* phone or baseline views **************************/
+/* phone view */
 header, footer {
     background-color: #dbe9ee;
     color: #303c6c;
@@ -8,16 +8,39 @@ header, footer {
 	justify-content: center;
     padding: 10px;
     border-radius: 5px;
+	
 }
 
-h1{ text-align: center;
-	color: #4f6d7a;
-	
-	}
-img{ width:15%;}	
-body {
-	font-family: Arial, Helvetica, sans-serif;
+.row {
+	display: flex;
 }
+
+.col-one {
+  height: auto;
+  width: 100%;
+  
+}
+
+.col-two {
+  height:auto;
+  width: 100%;
+ 
+}
+
+header h1{ 
+	
+	text-align: left;
+	color: #4f6d7a;
+	}
+	
+header img{ 
+	width: 30%;
+	float: right;
+}	
+
+body {
+	font-family: 'Raleway', sans-serif;
+	}
 
 header, nav, body, footer {
 	
@@ -48,50 +71,44 @@ nav a:hover {
 	background-color: #166088;
 	color: #c0d6df;
 }
-.active {
-	color: #fff;
-}
 
 footer {
 	flex: 0 1 100%;
 	height: 4rem;
 }
 
-/* Tablet Views ******************************/
+/* Tablet View */
 @media only screen and (min-width: 37.5em) {
-nav ul { display: flex; }
-nav ul li { flex: 1 1 100%; }
+nav ul { 
+		display: flex; 
+}
+
+nav ul li {
+	 flex: 1 1 100%; 
+	 }
+
 nav a {
 		font-size: 16px;
 	}
-	
-	article:nth-child(3) {
-		grid-column: span 2;
-	}
-	main picture {
-		display: block;
-	}
-	main picture img {
-		width: 100%;
-		height: auto;
-		border: 1px solid #bbb;
-	}
+.row {
+	display: flex;
 }
+[class*="col-"] {
+    width: 50%;
+  }
 
-/* Desktop Views ****************************/
+/* Desktop View */
 @media only screen and (min-width: 60em) {
-	nav a {
+nav a {
 		font-size: 18px;
     }
-    #pics {
-        display: flex;
-    }
-    #logo {
-        float: right;
-    }
-	main {
-		
-	}
-	
+.row {
+	display: flex;
+	max-width: 1000px;
+}
+}
+[class*="col-"] {
+    width: 50%;
+  }
 }
 
