--- a/Week7/css/large.css
+++ b/Week7/css/large.css
@@ -2,6 +2,14 @@
 #nav a {
 		font-size: 18px;
     }
-.weather_widget{
-height: 415px;
-}
+		.container{
+
+		  grid-template-columns: auto auto auto;
+		}
+		.containerimg {
+		max-width: 275px;
+		max-height: 300px;
+		}
+		.container > div:hover {
+		  box-shadow: 5px 10px 10px #444444;
+		}
